Fix misalignment of the keypad

--- a/src/components/calculator/calculator.css
+++ b/src/components/calculator/calculator.css
@@ -7,6 +7,10 @@ html {
 }
 
 .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: fixed;
   top: 50%;
   left: 50%;
