--- a/src/components/display/display.css
+++ b/src/components/display/display.css
@@ -3,6 +3,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    align-self: center;
     width: 100%;
     height: 50px;
     padding: 40px 0;
@@ -12,6 +13,7 @@
   }
   
   textarea.user-inputs {
+    align-self: center;
     max-width: 310px;
     height: 95px;
     font-size: 38px;
